fix(toast-ui): [PM-25656 / PM-3387] UI Fix - Toasts should appear above Dialogs on small screens (#16292)
On the Browser Extension, Toast notifications were appearing behind open Dialog components, making the toast unreadable to users. This PR removes `position: absolute;` and `z-index: 980;` from the Extension's `app-root`. This makes Toasts part of the same stacking context as Dialogs, and thus allows Toasts to always appear above Dialogs.

--- a/apps/browser/src/popup/scss/base.scss
+++ b/apps/browser/src/popup/scss/base.scss
@@ -372,10 +372,9 @@ header:not(bit-callout header, bit-dialog header, popup-page header) {
 }
 
 app-root {
-  position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 980;
+
   @include themify($themes) {
     background-color: themed("backgroundColor");
   }
